# minusagent

./: Cargo.toml  README.md  bindings.json
.claude/: CLAUDE.md
.claude/docs/core/: agent.md  context.md  harness.md  llm.md  logger.md  manager.md  node.md  (+4 more)
.claude/rules/: code-style.md  writing-style.md
.github/workflows/: ci.yml  release.yml
docs/config/: tuning.md
docs/core/: llm.md
docs/engine/: context.md  logger.md  session.md
docs/frontend/: channel.md  gateway.md
docs/intelligence/: intelligence.md
docs/resilience/: resilience.md
docs/routing/: protocol.md  router.md
docs/scheduler/: cron.md  heartbeat.md
docs/team/: team.md
prompts/: memory.md  skills.md  system.md
src/: config.rs  lib.rs  logger.rs  main.rs  runtime.rs
src/config/: frontend.rs  llm.rs  tuning.rs
src/core/: agent.rs  llm.rs  manager.rs  mod.rs  node.rs  router.rs  session.rs  store.rs  subagent.rs  task.rs  team.rs  todo.rs  tool.rs  worktree.rs
src/engine/: agent.rs  llm.rs  mod.rs  node.rs  session.rs  store.rs
src/frontend/: cli.rs  discord.rs  gateway.rs  launch.rs  mod.rs  repl.rs  stdio.rs  utils.rs
src/intelligence/: bootstrap.rs  manager.rs  memory.rs  mod.rs  prompt.rs  skills.rs  utils.rs
src/resilience/: classify.rs  mod.rs  profile.rs  runner.rs
src/routing/: delivery.rs  mod.rs  protocol.rs  router.rs
src/runtime/: service_state.rs
src/scheduler/: cron.rs  heartbeat.rs  lane.rs  mod.rs
src/team/: manager.rs  mod.rs  task.rs  todo.rs  worktree.rs
src/tool/: exec.rs  mod.rs  schema.rs  search.rs  web.rs
workspace/mandeven/: IDENTITY.md
(+62 files in other folders)
