[package]
name = "minusagent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.29"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "0.2.2"
regex = "1.12.3"
cron = "0.15"
clap = { version = "4", features = ["derive"] }
glob = "0.3.3"

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3"
